--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,8 +26,8 @@ jobs:
           git checkout dev
           git pull
           docker rmi metabase/metabase:latest
-          docker build -t metabase/metabase:latest . --no-cache
-          docker compose down || true
+          docker build -t metabase/metabase:latest .
+          docker compose down
           docker compose up -d
           EOF
 
